static/psi4manual/1.3.2/_sources/api/psi4.core.Wavefunction.rst.txt
Wavefunction
============

.. currentmodule:: psi4.core

.. autoclass:: Wavefunction
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~Wavefunction.Ca
      ~Wavefunction.Ca_subset
      ~Wavefunction.Cb
      ~Wavefunction.Cb_subset
      ~Wavefunction.Da
      ~Wavefunction.Da_subset
      ~Wavefunction.Db
      ~Wavefunction.Db_subset
      ~Wavefunction.Fa
      ~Wavefunction.Fa_subset
      ~Wavefunction.Fb
      ~Wavefunction.Fb_subset
      ~Wavefunction.H
      ~Wavefunction.PCM_enabled
      ~Wavefunction.S
      ~Wavefunction.X
      ~Wavefunction.alpha_orbital_space
      ~Wavefunction.aotoso
      ~Wavefunction.array_variable
      ~Wavefunction.array_variables
      ~Wavefunction.arrays
      ~Wavefunction.atomic_point_charges
      ~Wavefunction.basis_projection
      ~Wavefunction.basisset
      ~Wavefunction.beta_orbital_space
      ~Wavefunction.build
      ~Wavefunction.c1_deep_copy
      ~Wavefunction.compute_energy
      ~Wavefunction.compute_gradient
      ~Wavefunction.compute_hessian
      ~Wavefunction.deep_copy
      ~Wavefunction.del_array_variable
      ~Wavefunction.del_scalar_variable
      ~Wavefunction.del_variable
      ~Wavefunction.density_fitted
      ~Wavefunction.doccpi
      ~Wavefunction.efzc
      ~Wavefunction.energy
      ~Wavefunction.epsilon_a
      ~Wavefunction.epsilon_a_subset
      ~Wavefunction.epsilon_b
      ~Wavefunction.epsilon_b_subset
      ~Wavefunction.esp_at_nuclei
      ~Wavefunction.force_doccpi
      ~Wavefunction.force_soccpi
      ~Wavefunction.frequencies
      ~Wavefunction.from_file
      ~Wavefunction.frzcpi
      ~Wavefunction.frzvpi
      ~Wavefunction.get_array
      ~Wavefunction.get_basisset
      ~Wavefunction.get_dipole_field_strength
      ~Wavefunction.get_print
      ~Wavefunction.get_scratch_filename
      ~Wavefunction.get_variable
      ~Wavefunction.gradient
      ~Wavefunction.has_array_variable
      ~Wavefunction.has_scalar_variable
      ~Wavefunction.has_variable
      ~Wavefunction.hessian
      ~Wavefunction.legacy_frequencies
      ~Wavefunction.mo_extents
      ~Wavefunction.molecule
      ~Wavefunction.nalpha
      ~Wavefunction.nalphapi
      ~Wavefunction.name
      ~Wavefunction.nbeta
      ~Wavefunction.nbetapi
      ~Wavefunction.nfrzc
      ~Wavefunction.nirrep
      ~Wavefunction.nmo
      ~Wavefunction.nmopi
      ~Wavefunction.no_occupations
      ~Wavefunction.nso
      ~Wavefunction.nsopi
      ~Wavefunction.reference_wavefunction
      ~Wavefunction.same_a_b_dens
      ~Wavefunction.same_a_b_orbs
      ~Wavefunction.scalar_variable
      ~Wavefunction.scalar_variables
      ~Wavefunction.set_array
      ~Wavefunction.set_array_variable
      ~Wavefunction.set_basisset
      ~Wavefunction.set_energy
      ~Wavefunction.set_external_potential
      ~Wavefunction.set_frequencies
      ~Wavefunction.set_gradient
      ~Wavefunction.set_hessian
      ~Wavefunction.set_legacy_frequencies
      ~Wavefunction.set_name
      ~Wavefunction.set_print
      ~Wavefunction.set_reference_wavefunction
      ~Wavefunction.set_scalar_variable
      ~Wavefunction.set_variable
      ~Wavefunction.shallow_copy
      ~Wavefunction.sobasisset
      ~Wavefunction.soccpi
      ~Wavefunction.to_file
      ~Wavefunction.variable
      ~Wavefunction.variables

   .. rubric:: Methods Documentation

   .. automethod:: Ca
   .. automethod:: Ca_subset
   .. automethod:: Cb
   .. automethod:: Cb_subset
   .. automethod:: Da
   .. automethod:: Da_subset
   .. automethod:: Db
   .. automethod:: Db_subset
   .. automethod:: Fa
   .. automethod:: Fa_subset
   .. automethod:: Fb
   .. automethod:: Fb_subset
   .. automethod:: H
   .. automethod:: PCM_enabled
   .. automethod:: S
   .. automethod:: X
   .. automethod:: alpha_orbital_space
   .. automethod:: aotoso
   .. automethod:: array_variable
   .. automethod:: array_variables
   .. automethod:: arrays
   .. automethod:: atomic_point_charges
   .. automethod:: basis_projection
   .. automethod:: basisset
   .. automethod:: beta_orbital_space
   .. automethod:: build
   .. automethod:: c1_deep_copy
   .. automethod:: compute_energy
   .. automethod:: compute_gradient
   .. automethod:: compute_hessian
   .. automethod:: deep_copy
   .. automethod:: del_array_variable
   .. automethod:: del_scalar_variable
   .. automethod:: del_variable
   .. automethod:: density_fitted
   .. automethod:: doccpi
   .. automethod:: efzc
   .. automethod:: energy
   .. automethod:: epsilon_a
   .. automethod:: epsilon_a_subset
   .. automethod:: epsilon_b
   .. automethod:: epsilon_b_subset
   .. automethod:: esp_at_nuclei
   .. automethod:: force_doccpi
   .. automethod:: force_soccpi
   .. automethod:: frequencies
   .. automethod:: from_file
   .. automethod:: frzcpi
   .. automethod:: frzvpi
   .. automethod:: get_array
   .. automethod:: get_basisset
   .. automethod:: get_dipole_field_strength
   .. automethod:: get_print
   .. automethod:: get_scratch_filename
   .. automethod:: get_variable
   .. automethod:: gradient
   .. automethod:: has_array_variable
   .. automethod:: has_scalar_variable
   .. automethod:: has_variable
   .. automethod:: hessian
   .. automethod:: legacy_frequencies
   .. automethod:: mo_extents
   .. automethod:: molecule
   .. automethod:: nalpha
   .. automethod:: nalphapi
   .. automethod:: name
   .. automethod:: nbeta
   .. automethod:: nbetapi
   .. automethod:: nfrzc
   .. automethod:: nirrep
   .. automethod:: nmo
   .. automethod:: nmopi
   .. automethod:: no_occupations
   .. automethod:: nso
   .. automethod:: nsopi
   .. automethod:: reference_wavefunction
   .. automethod:: same_a_b_dens
   .. automethod:: same_a_b_orbs
   .. automethod:: scalar_variable
   .. automethod:: scalar_variables
   .. automethod:: set_array
   .. automethod:: set_array_variable
   .. automethod:: set_basisset
   .. automethod:: set_energy
   .. automethod:: set_external_potential
   .. automethod:: set_frequencies
   .. automethod:: set_gradient
   .. automethod:: set_hessian
   .. automethod:: set_legacy_frequencies
   .. automethod:: set_name
   .. automethod:: set_print
   .. automethod:: set_reference_wavefunction
   .. automethod:: set_scalar_variable
   .. automethod:: set_variable
   .. automethod:: shallow_copy
   .. automethod:: sobasisset
   .. automethod:: soccpi
   .. automethod:: to_file
   .. automethod:: variable
   .. automethod:: variables
